links to simon's stuff and case access

--- a/app/views/searchcases/pages/casedetailsiac.html
+++ b/app/views/searchcases/pages/casedetailsiac.html
@@ -60,22 +60,17 @@ Case details
                 <ul class="govuk-tabs__list">
                     <li class="govuk-tabs__list-item govuk-tabs__list-item--selected">
                         <a class="govuk-tabs__tab" href="#event">
-                            History
+                            Overview
                         </a>
                     </li>
                     <li class="govuk-tabs__list-item">
                         <a class="govuk-tabs__tab" href="#past-week">
-                            Petition
+                            Appeal
                         </a>
                     </li>
                     <li class="govuk-tabs__list-item">
                         <a class="govuk-tabs__tab" href="#past-week">
-                            AOS
-                        </a>
-                    </li>
-                    <li class="govuk-tabs__list-item">
-                        <a class="govuk-tabs__tab" href="#past-week">
-                            Outcome of Decree Nisi
+                            Appellant
                         </a>
                     </li>
                     <li class="govuk-tabs__list-item">
@@ -85,7 +80,22 @@ Case details
                     </li>
                     <li class="govuk-tabs__list-item">
                         <a class="govuk-tabs__tab" href="#past-week">
-                            Marriage Certificate
+                            Directions
+                        </a>
+                    </li>
+                    <li class="govuk-tabs__list-item">
+                        <a class="govuk-tabs__tab" href="#past-week">
+                            Case notes
+                        </a>
+                    </li>
+                    <li class="govuk-tabs__list-item">
+                        <a class="govuk-tabs__tab" href="#past-week">
+                            Hearing and appointment
+                        </a>
+                    </li>
+                    <li class="govuk-tabs__list-item">
+                        <a class="govuk-tabs__tab" href="#past-week">
+                            Applications
                         </a>
                     </li>
                 </ul>
@@ -105,7 +115,7 @@ Case details
                             {% if data.newcaseselected == 'true' %}
                                 <tr class="govuk-table__row">
                                     <td class="govuk-table__cell">&nbsp;&nbsp;<a href="">Case submitted</a></td>
-                                    <td class="govuk-table__cell" style="text-decoration: underline;">17 May 2020, 3:49:22 PM</td>
+                                    <td class="govuk-table__cell" style="text-decoration: underline;">17 March 2021, 3:49:22 PM</td>
                                     <td class="govuk-table__cell">Peter Bach</td>
                                 </tr>
                                 <tr class="govuk-table__row">
@@ -121,7 +131,7 @@ Case details
                             {% else %}
                                 <tr class="govuk-table__row" style="border-left: 4px solid #005ea5; background-color: rgba(0,94,165,0.2); ">
                                     <td class="govuk-table__cell">&nbsp;&nbsp;<a href="">Case submitted</a></td>
-                                    <td class="govuk-table__cell" style="text-decoration: underline;">17 May 2020, 3:49:22 PM</td>
+                                    <td class="govuk-table__cell" style="text-decoration: underline;">17 March 2021, 3:49:22 PM</td>
                                     <td class="govuk-table__cell">Alex Smith</td>
                                 </tr>
                             {% endif %}
@@ -150,7 +160,7 @@ Case details
                                 </div>
                             {% else %}
                                 <div>
-                                    <p style="text-decoration: underline;">17 May 2020, 3:49:22 PM</p>
+                                    <p style="text-decoration: underline;">17 March 2021, 3:49:22 PM</p>
                                     <p>Alex Smith</p>
                                     <p>Solicitor - Awaiting Payment Confirmation</p>
                                     <p>Case submission</p>
