--- a/app/views/searchcases/pages/results.html
+++ b/app/views/searchcases/pages/results.html
@@ -41,21 +41,21 @@ Case details
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Appeal submitted</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Manchester Tribunal Hearing Centre</td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailsdivorce">View</a></td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailsiac?casereference=3453620715339738&">View</a></td>
                 </tr>
                 <tr class="govuk-table__row">
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Basilia Bourdeau<br><span style="font-size: 16px; color:#505a5f;">4520-3340-3600-1211</span></td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Case under review</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Field House Tribunal Hearing Centre</td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/caseaccess/pages/PA-00321-2018">Challenged access</a></td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/caseaccess/pages/IAC">Challenged access</a></td>
                 </tr>
                 <tr class="govuk-table__row">
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Letha Schwebach<br><span style="font-size: 16px; color:#505a5f;">0087-2869-7369-3465</span></td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Divorce</td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Social Security and Child Support</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Ready for transfer</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Clerkenwell and Shoreditch County Court and Family Court</td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/caseaccess/pages/PA-00467-2017">Specific access</a></td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/caseaccess/pages/SSCSs">Specific access</a></td>
                 </tr>
             </tbody>
         </table>
