--- a/app/views/caseaccess/pages/SSCS-a.html
+++ b/app/views/caseaccess/pages/SSCS-a.html
@@ -25,9 +25,8 @@ Case details
 <div class="govuk-grid-row" style="width:1220px; margin-left: 0px;">
   <div class="" style="display: flex; justify-content: space-between; ">
 
-
     <div>
-      <h1 class="govuk-heading-xl">SSCS Challenged</h1>
+      <h1 class="govuk-heading-xl">9872574867365860</h1>
     </div>
 
 
@@ -128,22 +127,22 @@ Case details
           <span class="hmcts-progress-bar__label">Appeal<br>submitted</span>
         </li>
 
-        <li class="hmcts-progress-bar__list-item">
-            <span class="hmcts-progress-bar__icon hmcts-progress-bar__icon--complete"></span>
+        <li class="hmcts-progress-bar__list-item" aria-current="step">
+            <span class="hmcts-progress-bar__icon "></span>
           <span class="hmcts-progress-bar__label">Awaiting<br>respondent<br>evidence</span>
         </li>
 
         <li class="hmcts-progress-bar__list-item">
-            <span class="hmcts-progress-bar__icon hmcts-progress-bar__icon--complete"></span>
+            <span class="hmcts-progress-bar__icon "></span>
           <span class="hmcts-progress-bar__label">Case<br>building</span>
         </li>
 
         <li class="hmcts-progress-bar__list-item">
-          <span class="hmcts-progress-bar__icon hmcts-progress-bar__icon--complete"></span>
+          <span class="hmcts-progress-bar__icon "></span>
           <span class="hmcts-progress-bar__label">Case<br>under<br>review</span>
         </li>
 
-        <li class="hmcts-progress-bar__list-item" aria-current="step">
+        <li class="hmcts-progress-bar__list-item" >
           <span class="hmcts-progress-bar__icon"></span>
           <span class="hmcts-progress-bar__label">Respondent<br>review</span>
         </li>
@@ -196,7 +195,7 @@ Case details
                    Appeal reference
                  </dt>
                  <dd class="govuk-summary-list__value">
-                   PA/00321/2018
+                   9872574867365860
                  </dd>
 
                </div>
@@ -208,7 +207,7 @@ Case details
                    Appellant
                  </dt>
                  <dd class="govuk-summary-list__value">
-                    Robert Saddlebrook
+                    Joanna Burns
                  </dd>
 
                </div>
@@ -239,7 +238,6 @@ Case details
 
 
          </dl>
-
 
 
 
