--- a/app/views/caseaccess/pages/SSCS.html
+++ b/app/views/caseaccess/pages/SSCS.html
@@ -27,55 +27,55 @@ Case details
     <div class="govuk-grid-row" style="width:1220px; margin-left: 0px;">
       <div class="" style="display: flex; justify-content: space-between; ">
         <div style="display: flex; ">
-            <h1 class="govuk-heading-xl">SSCS Challenged</h1>
+          <h1 class="govuk-heading-xl">9872574867365860</h1>
           </div>
-        </div>
-      </div>
-      <h2 class="govuk-heading-m">Case details</h2>
-      <dl class="govuk-summary-list">
-        <div class="govuk-summary-list__row">
+          </div>
+          </div>
+          <h2 class="govuk-heading-m">Case details</h2>
+          <dl class="govuk-summary-list">
+          <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key summary-key">
-            Case name
+          Case name
           </dt>
           <dd class="govuk-summary-list__value">
-            Robert Saddlebrook
+          Joanna Burns
           </dd>
-        </div>
-        <div class="govuk-summary-list__row">
+          </div>
+          <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key summary-key">
-            Service
+          Service
           </dt>
           <dd class="govuk-summary-list__value">
-            	Immigration and Asylum
+            Social Security and Child Support
           </dd>
-        </div>
-        <div class="govuk-summary-list__row">
+          </div>
+          <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key summary-key">
-            State
+          State
           </dt>
           <dd class="govuk-summary-list__value">
-            Appeal submitted
+          Awaiting Evidence
           </dd>
-        </div>
-        <div class="govuk-summary-list__row">
+          </div>
+          <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key summary-key">
-            Court or hearing centre
+          Court or hearing centre
           </dt>
           <dd class="govuk-summary-list__value">
-            Manchester Civil Justice Centre
+          Bexleyheath Social Security & Child Support Tribunal
           </dd>
-        </div>
+          </div>
 
 
-        <div class="govuk-summary-list__row">
+          <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key summary-key">
-            Access
+          Access
           </dt>
           <dd class="govuk-summary-list__value">
-            Challenged
+          Challenged
           </dd>
-        </div>
-      </dl>
+          </div>
+          </dl>
 
     </div>
     {{ govukButton({
