--- a/app/views/caseaccess/pages/myaccess-SSCSs-gr.html
+++ b/app/views/caseaccess/pages/myaccess-SSCSs-gr.html
@@ -37,8 +37,8 @@ My work
               </a>
             </li>
             <li class="hmcts-sub-navigation__item">
-              <a class="hmcts-sub-navigation__link" aria-current="page"  href="myaccess-IACs-gr">
-                My access <!-- <span class="xui-alert-link__number"> 1 </span> -->
+              <a class="hmcts-sub-navigation__link" aria-current="page"  href="#">
+                My access  <span class="xui-alert-link__number"> 2 </span>
               </a>
             </li>
           </ul>
@@ -47,7 +47,7 @@ My work
         <table class="govuk-table ">
             <thead class="govuk-table__head">
               <tr class="govuk-table__row">
-                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 200px;" aria-sort="ascending"><button type="button" data-index="0">Case name</button></th>
+                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="ascending"><button type="button" data-index="0">Case name</button></th>
                   <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Jurisdiction</button></th>
                   <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Case category</button></th>
   <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 120px;" aria-sort="none"><button type="button" data-index="1">Case role</button></th>
@@ -58,28 +58,31 @@ My work
               </tr>
             </thead>
             <tbody class="govuk-table__body">
-
               <tr class="govuk-table__row">
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Lorenzo Hanoi</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Family Public Law</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Reviewer</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Specific</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Pending</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-              <td class="govuk-table__cell"><!-- &nbsp;&nbsp;&nbsp;<a href="myaccess-po" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span>--></td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="/caseaccess/pages/SSCSs-atc"><strong>Ali Uddin</strong></a></td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Immigration and Asylum</strong></td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Protection</strong></td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Reviewer</strong></td>
+                  <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Specific</strong></td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>31/03/2021 </strong></td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>06/04/2021 </strong></td>
+                <td class="govuk-table__cell"></td>
               </tr>
 
+
+
               <tr class="govuk-table__row">
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Amelia Chu</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Reviewer</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Specific</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Pending</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-              <td class="govuk-table__cell"><!-- &nbsp;&nbsp;&nbsp;<a href="myaccess-po" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span>--></td>
-              </tr>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Amelia Chu</strong></td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Immigration and Asylum</strong></td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Protection</strong></td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Reviewer</strong></td>
+                  <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>No access</strong></td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19" >&nbsp;&nbsp;&nbsp;<a href="SSCSs-tcrvd" class="right_m">View</a></td>
+
+
+                  </tr>
 
               </tbody>
           </table>
