--- a/app/views/caseaccess/pages/SSCS-request.html
+++ b/app/views/caseaccess/pages/SSCS-request.html
@@ -14,7 +14,7 @@ Case details
   </svg>
   <div class="hmcts-banner__message">
     <span class="hmcts-banner__assistive">information</span>
-    This case has specific access.<br>This means it requires authorisation. If you request access to the case, it will be logged for auditing purposes.
+    This case has challenged access.<br>This is because the case is outside your work area. If you request access to the case, it will be logged for auditing purposes.
   </div>
 </div>
 <div class="govuk-grid-row">
