--- a/app/views/caseaccess/pages/SSCSs-confirmation.html
+++ b/app/views/caseaccess/pages/SSCSs-confirmation.html
@@ -17,7 +17,7 @@ Case details
           action="PA-00321-2018-request">
       {{ govukPanel({
         titleText: "Request sent",
-        html: "Case reference:<br><strong>PA/00467/2017</strong>"
+        html: "Case reference:<br><strong>IA/56765/2021</strong>"
       }) }}
   <!--    <p class="govuk-body">We have sent you a confirmation email.</p>
 -->
