--- a/app/views/caseaccess/pages/myaccess-SSCSs-p.html
+++ b/app/views/caseaccess/pages/myaccess-SSCSs-p.html
@@ -32,18 +32,18 @@ My work
               </a>
             </li>
             <li class="hmcts-sub-navigation__item">
-              <a class="hmcts-sub-navigation__link"  href="mycases-p">
+              <a class="hmcts-sub-navigation__link"  href="#">
                 My cases <!-- <span class="xui-alert-link__number"> 1 </span> -->
               </a>
             </li>
             <li class="hmcts-sub-navigation__item">
-              <a class="hmcts-sub-navigation__link" aria-current="page"  href="myaccess-p">
+              <a class="hmcts-sub-navigation__link" aria-current="page"  href="myaccess-SSCSs-gr">
                 My access <!-- <span class="xui-alert-link__number"> 1 </span> -->
               </a>
             </li>
           </ul>
         </nav>
-        <p class="govuk-body">Displaying <strong>1</strong> of <strong>1</strong> cases </p>
+        <p class="govuk-body">Displaying <strong>2</strong> of <strong>2</strong> cases </p>
         <table class="govuk-table ">
             <thead class="govuk-table__head">
               <tr class="govuk-table__row">
@@ -61,7 +61,7 @@ My work
             </thead>
             <tbody class="govuk-table__body">
               <tr class="govuk-table__row">
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Amelia Chu</td>
+              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Ali Uddin</td>
               <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
               <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
               <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Reviewer</td>
@@ -71,6 +71,16 @@ My work
               <td class="govuk-table__cell"><!-- &nbsp;&nbsp;&nbsp;<a href="myaccess-po" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span>--></td>
               </tr>
 
+              <tr class="govuk-table__row">
+              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Amelia Chu</td>
+              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
+              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
+              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Reviewer</td>
+              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Specific</td>
+              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Pending</td>
+              <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
+              <td class="govuk-table__cell"><!-- &nbsp;&nbsp;&nbsp;<a href="myaccess-po" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span>--></td>
+              </tr>
               </tbody>
           </table>
 
