--- a/app/views/searchcases/pages/casedetailssscs.html
+++ b/app/views/searchcases/pages/casedetailssscs.html
@@ -60,22 +60,17 @@ Case details
                 <ul class="govuk-tabs__list">
                     <li class="govuk-tabs__list-item govuk-tabs__list-item--selected">
                         <a class="govuk-tabs__tab" href="#event">
+                            Summary
+                        </a>
+                    </li>
+                    <li class="govuk-tabs__list-item">
+                        <a class="govuk-tabs__tab" href="#past-week">
                             History
                         </a>
                     </li>
                     <li class="govuk-tabs__list-item">
                         <a class="govuk-tabs__tab" href="#past-week">
-                            Petition
-                        </a>
-                    </li>
-                    <li class="govuk-tabs__list-item">
-                        <a class="govuk-tabs__tab" href="#past-week">
-                            AOS
-                        </a>
-                    </li>
-                    <li class="govuk-tabs__list-item">
-                        <a class="govuk-tabs__tab" href="#past-week">
-                            Outcome of Decree Nisi
+                            Appeal details
                         </a>
                     </li>
                     <li class="govuk-tabs__list-item">
@@ -85,7 +80,7 @@ Case details
                     </li>
                     <li class="govuk-tabs__list-item">
                         <a class="govuk-tabs__tab" href="#past-week">
-                            Marriage Certificate
+                            Online hearing panel
                         </a>
                     </li>
                 </ul>
