--- a/app/views/searchcases/pages/noresults.html
+++ b/app/views/searchcases/pages/noresults.html
@@ -23,9 +23,9 @@ Case details
 
 
 <form
-    action="search.html"
+    action="/searchcases/pages/search"
     name="aspnetForm"
-    method="post"
+    method="get"
     id="aspnetForm"
     autocomplete="off"
     >
