--- a/app/views/searchcases/layoutstaff.html
+++ b/app/views/searchcases/layoutstaff.html
@@ -122,15 +122,23 @@
                     <a class="hmcts-search-toggle__button" href="">Find case</a>
                 </div>
                 -->
+            <form
+                name="aspnetForm"
+                method="post"
+                id="aspnetForm"
+                autocomplete="off"
+                action="/opencase"
+                >
 
-            <div style="display: flex;flex-direction: row; ">
-                <p style="color: white; margin-top:8px; margin-bottom: 0px;">16-digit case reference:  &nbsp;</p>
-                <input class="govuk-input" id="hmctsref" name="hmctsref" type="text" spellcheck="false" style="width:219px;">
-                <a href="/opencase" role="button" draggable="false" class="govuk-button govuk-button--secondary"
-                   style="height:36px; margin-left: 4px; margin-top: 2px;  margin-bottom: 0px;">
-                    Find
-                </a>
-            </div>
+                <div style="display: flex;flex-direction: row; ">
+                    <p style="color: white; margin-top:8px; margin-bottom: 0px;">16-digit case reference:  &nbsp;</p>
+                    <input class="govuk-input" id="hmctsrefheader" name="hmctsrefheader" type="text" spellcheck="false" style="width:219px;">
+                    <button class="govuk-button govuk-button--secondary" data-module="govuk-button" style="height:36px; margin-left: 4px; margin-top: 2px;  margin-bottom: 0px;">
+                        Find
+                    </button>
+
+                </div>
+            </form>
 
 
         </div>
