--- a/app/views/workallocation/index.html
+++ b/app/views/workallocation/index.html
@@ -9,13 +9,15 @@ GOV.UK Prototype Kit
       Work allocation prototype
     </h1>
     <h2 class="govuk-heading-l">
-      Last updated (26/3/20) <br><br>SUBJECT TO CHANGE - ERROR STATES TO BE ADDED
+      Last updated (30/3/20) <br><br>SUBJECT TO CHANGE - ERROR STATES TO BE ADDED
     </h2>
     <div style="display: flex; margin-top: 80px;">
+
+
       <div style="width: 800px;">
 
         <!-- JUDICIARY -->
-        <h2 class="govuk-heading-l">My work</h2>
+        <h2 class="govuk-heading-l">My work judiciary</h2>
         <div class="xui-alert-link__number">1 </div>
         <div class="govuk-!-padding-bottom-6"></div>
         <!-- SECTION BREAK -->
@@ -143,6 +145,142 @@ GOV.UK Prototype Kit
       <p><a target="_blank" href="/workallocation/pages/wa-myaccess-new-s-v?usertype=judiciary&">My access - tab - Specific - viewed</a><br>Checked with DS - v3.1.1</p>
         <p><a target="_blank" href="/workallocation/pages/wa-myaccess-new-assv?usertype=judiciary&">My access - tab - Assorted type - viewed</a><br>Checked with DS - v3.1.1</p>
       </div>
+
+
+  <div style="width: 800px;">
+
+    <!-- JUDICIARY -->
+    <h2 class="govuk-heading-l">My work staff</h2>
+    <div class="xui-alert-link__number">1 </div>
+    <div class="govuk-!-padding-bottom-6"></div>
+    <!-- SECTION BREAK -->
+
+    <p><a target="_blank" href="/workallocation/pages/wa-mytasks?usertype=staff&">My tasks - tab</a><br>Checked with DS - v3.1.1</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-mytasks-rs?usertype=staff&">My tasks - tab - Reset sorting</a><br>Checked with DS - v3.1.1</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-mytasks-o?usertype=staff&">My tasks - open - Go to tasks</a><br>Checked with DS - v3.1.1</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00321-2018?usertype=staff&">Active tasks</a><br>Checked with DS - v3.1.1 </p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00321-2018-a?usertype=staff&">Active tasks - Assign task to me</a><br>Checked with DS - v3.1.1</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00321-2018-app?usertype=staff&">Active tasks - Next steps - do the task</a><br></p>
+    <p><a target="_blank" href="/workallocation/pages/wa-app-confirmation?usertype=staff&">Active tasks - task complete</a><br>Checked with DS - v3.1.1</p>
+
+    <p><a target="_blank" href="/workallocation/pages/wa-available-tasks?usertype=staff&">Active tasks - task complete - return tp task tab</a><br>Checked with DS - v3.1.1</p>
+
+    <p><a target="_blank" href="/workallocation/pages/wa-available-tasks?usertype=staff&">Available tasks - tab</a><br>Checked with DS - v3.1.1</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-available-tasks-pag?usertype=staff&">Available tasks - tab - pagination (needs research)</a><br>Checked with DS - v3.1.1 </p>
+    <p><a target="_blank" href="/workallocation/pages/wa-mycases?usertype=staff&">My cases - tab</a><br>Checked with DS - v3.1.1</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-myaccess?usertype=staff&">My access - tab</a><br>Checked with DS - v3.1.1</p>
+    <div class="govuk-!-padding-bottom-9"></div>
+    <!-- SECTION BREAK -->
+
+    <h2 class="govuk-heading-l">My work filter</h2>
+    <div class="xui-alert-link__number">2 </div>
+    <div class="govuk-!-padding-bottom-6"></div>
+    <div class="govuk-!-padding-bottom-9"></div>
+    <!-- SECTION BREAK -->
+
+    <h2 class="govuk-heading-l">Available tasks</h2>
+    <div class="xui-alert-link__number">3 </div>
+    <div class="govuk-!-padding-bottom-6"></div>
+    <p><a target="_blank" href="/workallocation/pages/wa-available-tasks?usertype=staff&">Available tasks - tab</a><br>Checked with DS - v3.1.1</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-available-tasks-o?usertype=staff&">Available tasks - Assign task</a><br>Checked with DS - v3.1.1</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-available-tasks-a?usertype=staff&">Available tasks - Assigned to me</a><br>Checked with DS - v3.1.1</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-mytasks-ao?usertype=staff&">My tasks - Unassign</a><br>Checked with DS - v3.1.1 </p>
+    <p><a target="_blank" href="/workallocation/pages/lms?usertype=staff&">Unassign task - Unassign</a><br>Checked with DS - v3.1.1</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-mytasks-u?usertype=staff&">Unassigned task - Unassign</a><br>Checked with DS - v3.1.1</p>
+    <p><a target="_blank" href="/workallocation/pages/reassign?usertype=staff&">Reassign task - Find the judge</a><br>Checked with DS - v3.1.1</p>
+    <p><a target="_blank" href="/workallocation/pages/reassign-b?usertype=staff&">Reassign task - Check your changes</a><br>Checked with DS - v3.1.1</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-mytasks-r?usertype=staff&">My task - Reassigned</a><br>Checked with DS - v3.1.1</p>
+
+    <!-- SECTION BREAK -->
+
+    <h2 class="govuk-heading-l">Allocate a specific role from a task (DESIGN READY FROM DAVID - MONDAY 29Th)</h2>
+    <div class="xui-alert-link__number">4 </div>
+    <div class="govuk-!-padding-bottom-6"></div>
+    <p><a target="_blank" href="/workallocation/pages/wa-available-tasks?usertype=staff&">Available tasks - tab</a><br>Checked with DS - v3.1.1</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-available-tasks-o?usertype=staff&">Available tasks - Go to tasks</a><br>Checked with DS - v3.1.1</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-t?usertype=staff&">Active tasks</a><br></p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ar?usertype=staff&">Roles / access</a><br>Checked with DS - v3.1.1 - UPDATE PATTERN - REMOVE ADD</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ar?usertype=staff&">Roles / access - Allocate a role</a><br></p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-aj?usertype=staff&">Roles / access - Allocate a judicial role - Choose a role</a><br></p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajh?usertype=staff&">Roles / access - Allocate a judicial role - Hearing judge - Choose how to allocate... </a><br></p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajha?usertype=staff&">Roles / access - Allocate a judicial role - Hearing judge - Find the judge</a><br></p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajchk?usertype=staff&">Roles / access - Allocate a judicial role - Hearing judge - Check details</a><br></p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-arjp?usertype=staff&">Roles / access - Allocate a judicial role - Hearing judge - confirmation</a><br></p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-arjp-o?usertype=staff&">Roles / access - Rellocate</a><br></p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-real?usertype=staff&">Roles / access - Rellocate role</a><br></p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-real-chk?usertype=staff&">Roles / access - Rellocate role - check changes</a><br></p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-arj-re?usertype=staff&">Roles / access - Rellocate role - complete</a><br></p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-arjp-o?usertype=staff&">Roles / access - Remove allocation</a><br></p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-arjra?usertype=staff&">Roles / access - Remove allocation</a><br></p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-arjra-de?usertype=staff&">Roles / access - Removed allocation - complete</a><br></p>
+
+    <!-- SECTION BREAK -->
+
+    <h2 class="govuk-heading-l">Role already exists</h2>
+    <div class="xui-alert-link__number">5 </div>
+    <div class="govuk-!-padding-bottom-6"></div>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-aj-err?usertype=staff&">Allocate judicial role - error</a><br>Checked with DS - v3.1.1</p>
+
+    <!-- SECTION BREAK -->
+
+    <h2 class="govuk-heading-l">Add a fee-paid judge (IAC)</h2>
+    <div class="xui-alert-link__number">6 </div>
+    <div class="govuk-!-padding-bottom-6"></div>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ar-fpj?usertype=staff&">Roles / access - Allocate a role (IAC)</a><br>Checked with DS - v3.1.1</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-aj-fpj?usertype=staff&">Roles / access - Allocate a judicial role - Choose a role (IAC)</a><br>Checked with DS - v3.1.1</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajh-fpj?usertype=staff&">Roles / access - Allocate a judicial role - Hearing judge - Choose how to allocate... (IAC)</a><br>Checked with DS - v3.1.1 </p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajha-fpj?usertype=staff&">Roles / access - Allocate a judicial role - Hearing judge - Find the judge (IAC)</a><br>Checked with DS - v3.1.1</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajhadur-fpj?usertype=staff&">Roles / access - Allocate a judicial role - Hearing judge - Duration of access and role (IAC)</a><br>Checked with DS - v3.1.1</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajchk-fpj?usertype=staff&">Roles / access - Allocate a judicial role - Hearing judge - Check details (IAC)</a><br>Checked with DS - v3.1.1</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-arjp?usertype=staff&">Roles / access - Allocate a judicial role - Hearing judge - confirmation (IAC)</a><br>Checked with DS - v3.1.1</p>
+
+    <!-- SECTION BREAK -->
+
+    <h2 class="govuk-heading-l">Add an exclusion</h2>
+    <div class="xui-alert-link__number">7 </div>
+    <div class="govuk-!-padding-bottom-6"></div>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ar?usertype=staff&">Roles / access</a><br>Checked with DS - v3.1.1</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-coi?usertype=staff&">Roles / access - Add an exclusion - Who</a><br>Checked with DS - v3.1.1</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-coi-2?usertype=staff&">Roles / access - Add an exclusion - Role</a><br>Checked with DS - v3.1.1</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-coi-3?usertype=staff&">Roles / access - Add an exclusion - Find person</a><br>Checked with DS - v3.1.1</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-coi-4?usertype=staff&">Roles / access - Add an exclusion - Add type</a><br>Checked with DS - v3.1.1</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-coi-5?usertype=staff&">Roles / access - Add an exclusion - Describe exclusion</a><br>Checked with DS - v3.1.1</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-coi-6?usertype=staff&">Roles / access - Add an exclusion - Check details</a><br>Checked with DS - v3.1.1</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-arex?usertype=staff&">Roles / access - Add an exclusion - Complete</a><br>Checked with DS - v3.1.1</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-mytasks-ex?usertype=staff&">My tasks - Excluded self</a><br>Checked with DS - v3.1.1</p>
+
+    <!-- SECTION BREAK -->
+
+    <h2 class="govuk-heading-l">My cases</h2>
+    <div class="xui-alert-link__number">8 </div>
+    <div class="govuk-!-padding-bottom-6"></div>
+    <p><a target="_blank" href="/workallocation/pages/wa-mycases-new?usertype=staff&">My cases - new case alert</a><br>Checked with DS - v3.1.1</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-mycases-new-o?usertype=staff&">My cases - new case alert - options</a><br>Checked with DS - v3.1.1</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-1549?usertype=staff&">Case details</a><br>Checked with DS - v3.1.1</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-mycases-new-v?usertype=staff&">My cases - new case - viewed</a><br>Checked with DS - v3.1.1</p>
+
+
+    <!-- SECTION BREAK -->
+
+    <h2 class="govuk-heading-l">My access</h2>
+    <div class="xui-alert-link__number">9 </div>
+    <div class="govuk-!-padding-bottom-6"></div>
+    <p><a target="_blank" href="/workallocation/pages/wa-myaccess-new?usertype=staff&">My access - tab - New case alert - Pending</a><br>Checked with DS - v3.1.1</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-myaccess?usertype=staff&">My access - tab - pending - viewed</a><br>Checked with DS - v3.1.1</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-myaccess-new-re?usertype=staff&">My access - tab - New case alert - Rejected</a><br>Checked with DS - v3.1.1</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-myaccess-tcrvd?usertype=staff&">My access - tab - View rejection details</a><br>Checked with DS - v3.1.1 </p>
+    <p><a target="_blank" href="/workallocation/pages/wa-myaccess-new-re-v?usertype=staff&">My access - tab - rejected - viewed</a><br>Checked with DS - v3.1.1</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-myaccess-new-c?usertype=staff&">My access - tab - New case alert - Challenged</a><br>Checked with DS - v3.1.1</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-2018?usertype=staff&">My access - tab - case details- Challenged</a><br>Checked with DS - v3.1.1</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-myaccess-new-c-v?usertype=staff&">My access - tab - Challenged - viewed</a><br>Checked with DS - v3.1.1</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-myaccess-new-s?usertype=staff&">My access - tab - New case alert - Specific</a><br>Checked with DS - v3.1.1</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-2017?usertype=staff&">My access - tab - case details- Specific</a><br>Checked with DS - v3.1.1</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-myaccess-new-s-v?usertype=staff&">My access - tab - Specific - viewed</a><br>Checked with DS - v3.1.1</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-myaccess-new-assv?usertype=staff&">My access - tab - Assorted type - viewed</a><br>Checked with DS - v3.1.1</p>
+    </div>
+
+
+
     </div>
   </div>
 </div>
