updates for testing search and access case

--- a/app/views/searchcases/index.html
+++ b/app/views/searchcases/index.html
@@ -20,19 +20,27 @@
             <div style="width: 300px;">
 
                 <h2 class="govuk-heading-s">Immigration and Asylum</h2>
-                <p>Task 1<br> Task 2</p>
+                <p>Task 1</p>
+                <p><a  href="/searchcases/pages/startsearch?usertype=staff&">Task 2</a></p>
                 <p><a  href="/searchcases/pages/startsearch?usertype=staff&">Task 3</a></p>
                 <p><a  href="/searchcases/pages/startsearch?usertype=staff&">Task 4</a></p>
                 <p><a  href="/searchcases/pages/startsearch?usertype=staff&">Task 5</a></p>
+                <p>Task 6</p>
+                <p><a  href="/searchcases/pages/results?results=iactask7&">Task 7</a></p>
+                <p><a  href="/caseaccess/pages/available-tasks-IAC-s2">Task 8</a></p>
 
             </div>
 
             <div>
                 <h2 class="govuk-heading-s">Social Security and Child Support</h2>
-                <p>Task 1<br> Task 2</p>
+                <p>Task 1<p>
+                <p><a  href="/searchcases/pages/startsearch?usertype=staff&">Task 2</a></p>
                 <p><a  href="/searchcases/pages/startsearch?usertype=staff&">Task 3</a></p>
                 <p><a  href="/searchcases/pages/startsearch?usertype=staff&">Task 4</a></p>
-                <p>Task 5 - Start from another page</p>
+                <p><a  href="/searchcases/pages/caselist?usertype=staff&">Task 5</a></p>
+                <p><a  href="/searchcases/pages/results?results=sscstask6&">Task 6</a></p>
+                <p><a  href="/searchcases/pages/results?results=sscstask7&">Task 7</a></p>
+                <p><a  href="/caseaccess/pages/available-tasks-SSCS-s2">Task 8</a></p>
             </div>
 
         </div>
