--- a/app/views/searchcases/pages/casedetailssscs.html
+++ b/app/views/searchcases/pages/casedetailssscs.html
@@ -138,7 +138,7 @@ Case details
                                 <div>
                                     <p style="text-decoration: underline;">{{ data['todaydate'] }}, {{ data.todaydatetime }}</p>
                                     <p>Alex Smith</p>
-                                    <p>Case transferred to new solicitor</p>
+                                    <p>Represent</p>
                                     <p>Notice of change confirmed</p>
                                     <p>-</p>
                                     <p>-</p>
@@ -147,7 +147,7 @@ Case details
                                 <div>
                                     <p style="text-decoration: underline;">17 May 2020, 3:49:22 PM</p>
                                     <p>Alex Smith</p>
-                                    <p>Solicitor - Awaiting Payment Confirmation</p>
+                                    <p>Represent</p>
                                     <p>Case submission</p>
                                     <p>-</p>
                                     <p>-</p>
