--- a/app/views/caseaccess/pages/PA-00467-2017-trrc.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-trrc.html
@@ -11,7 +11,7 @@ Case details
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-two-thirds">
               {{ govukPanel({
-                titleText: "Access denied"
+                titleText: "Request for access denied"
               }) }}
               <h2 class="govuk-heading-m">What happens next</h2>
               <p class="govuk-body">
